force-app/main/default/objects/Dispute/fields/Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Date__c</fullName>
    <label>Check-in Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>