force-app/main/default/objects/Dispute/fields/Check_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Date__c</fullName>
    <label>Check-out Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>