force-app/main/default/objects/Dispute/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel Bill</fullName>
            </value>
            <value>
                <fullName>Cab Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>