force-app/main/default/objects/Dispute/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <label>Guest Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>