force-app/main/default/objects/Dispute/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>