force-app/main/default/objects/Dispute/fields/PAN_Number_Client__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number_Client__c</fullName>
    <label>PAN Number (Client)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>